Convert streams to lists with .toList() instead of .collect(Collectors.toList())